--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   supabase_flutter: ^2.5.6
   flutter_dotenv: ^5.1.0
 
+  # HTTP client
+  http: ^1.1.0
+
+  # Password hashing
+  bcrypt: ^1.1.3
+
+  # Local storage
+  shared_preferences: ^2.2.2
+
   # Deep linking
   app_links: ^6.4.1
 
